--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -37,9 +37,12 @@ html::-webkit-scrollbar-thumb{
 }
 
 body{
-    background:#111;
-    overflow-x: hidden;
-    padding-left: 35rem;
+  background-image: url('media/2025cd371f0a3bd1e06150458875a533.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+  overflow-x: hidden;
+  padding-left: 35rem;
 }
 
 section{
