--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -37,7 +37,7 @@ html::-webkit-scrollbar-thumb{
 }
 
 body{
-  background-image: url('media/2025cd371f0a3bd1e06150458875a533.jpg');
+  background-image: url('../media/2025cd371f0a3bd1e06150458875a533.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
