--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -37,7 +37,7 @@ html::-webkit-scrollbar-thumb{
 }
 
 body{
-  background-image: url('../imgs/bg.jpg');
+  background-image: url('../imgs/lines_strokes_blue_background_104907_1280x720.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
