--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -41,7 +41,7 @@ body{
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  background-position: center;
+  background-position: right;
   overflow-x: hidden;
   padding-left: 35rem;
 }
